rm docker java 1.8 specific runtime flags